<resources>
    <string name="app_name" translatable="false">Practice Two</string>
    <string name="settingsLabelText">Settings</string>
    <string name="taskLabelText">Tasks</string>
    <string name="taskAllText">All</string>
    <string name="taskFavouriteText">Favourite</string>
    <string name="ordinaryPopupText">Make ordinary</string>
    <string name="favouritePopupText">Make favourite</string>
    <string name="storageType">Store data:</string>
    <string name="sharedPreferencesType">Shared preferences</string>
    <string name="sqlDatabaseType">Database</string>
    <string name="externalStorageType">External Storage</string>
    <string name="internalStorageType">Internal Storage</string>
    <string name="newTaskLabelText">New task</string>
    <string name="newTaskTitle">Title</string>
    <string name="newTaskDescription">Description</string>
    <string name="newTaskSave">Save</string>
    <string name="newTaskSaved">Saved successfully</string>
    <string name="newTaskNotSaved">Application Error. Not saved</string>
    <string name="explanationDialogTitle">Permission need</string>
    <string name="explanationDialogMessage">Permission is needed for writing data into file on external storage</string>
    <string name="okBtn">OK</string>
    <string name="cancelBtn">Cancel</string>
    <string name="contentDescriptionForDrawerHeader" translatable="false">Some image</string>
    <string name="drawerHeaderText" translatable="false">Practice two app</string>
    <string name="drawerOpen">Open navigation drawer</string>
    <string name="drawerClose">Close navigation drawer</string>
    <string name="permissionGranted">permission granted</string>
    <string name="permissionNotGranted">PERMISSION NOT GRANTED!!!</string>
    <string name="fieldIsEmpty">Some field is empty</string>
    <string name="recyclerViewItemHamburger" translatable="false">&#8942;</string>
    <string name="editTask">Edit</string>
    <string name="deleteTask">Delete</string>
    <string name="taskRemoved">Removed</string>
    <string name="taskChanged">Changed</string>
    <string name="taskSaved">Saved</string>
    <string name="taskNotRemoved">Not removed!</string>
    <string name="taskNotChanged">Not changed!</string>
    <string name="taskNotSaved">Not saved!</string>
    <string name="readError">Read error</string>
</resources>
