<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <TextView
        android:id="@+id/taskTitleTV"
        style="@style/recyclerViewItemTextSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/newTaskTitle"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/taskDescriptionTV"
        style="@style/recyclerViewItemTextSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/taskTitleTV"
        android:layout_alignParentStart="true"
        android:layout_marginTop="16dp"
        android:layout_toStartOf="@id/menuImitationHamburger"
        android:text="@string/newTaskDescription" />

    <TextView
        android:id="@+id/menuImitationHamburger"
        style="@style/recyclerViewItemHamburger"
        android:layout_width="24dp"
        android:layout_height="match_parent"
        android:layout_alignTop="@id/taskTitleTV"
        android:layout_alignBottom="@id/taskDescriptionTV"
        android:layout_alignParentEnd="true"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/recyclerViewItemHamburger" />

    <TextView
        android:id="@+id/horizontalDividerTV"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@+id/taskDescriptionTV"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="8dp"
        android:background="@color/colorPrimary" />

</RelativeLayout>